[gd_scene load_steps=2 format=3 uid="uid://bc8bbtl0t1i6h"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_1x2yh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_1x2yh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GameArea" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HealthLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 30.0
text = "Health: 100"

[node name="WaveLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 60.0
text = "Wave: 1"

[node name="MoneyLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 90.0
text = "Money: 100"

[node name="PathLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_top = 90.0
offset_right = 150.0
offset_bottom = 120.0
text = "Path: Maze"

[node name="TowerControls" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 0
offset_left = 900.0
offset_top = 20.0
offset_right = 1100.0
offset_bottom = 200.0

[node name="TowerLabel" type="Label" parent="UI/HUD/TowerControls"]
layout_mode = 2
text = "Towers (50$):"

[node name="PlaceTowerButton" type="Button" parent="UI/HUD/TowerControls"]
layout_mode = 2
text = "Place Tower (Click)"

[node name="InfoLabel" type="Label" parent="UI/HUD/TowerControls"]
layout_mode = 2
text = "Blue: Fast/Weak
Green: Balanced
Red: Slow/Strong"

[node name="GameInfo" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 200.0

[node name="ControlsLabel" type="Label" parent="UI/HUD/GameInfo"]
layout_mode = 2
text = "Left Click: Place Tower
Right Click: Cancel
Click Tower: Show Range
P: New Path
R: Restart"